syntax = "proto3";
package tendermint.spn.monitoringp;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "monitoringp/params.proto";
import "monitoringp/consumer_client_id.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/tendermint/spn/x/monitoringp/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/tendermint/spn/monitoringp/params";
  }
  // Queries a ConsumerClientID by index.
	rpc ConsumerClientID(QueryGetConsumerClientIDRequest) returns (QueryGetConsumerClientIDResponse) {
		option (google.api.http).get = "/tendermint/spn/monitoringp/consumer_client_id";
	}
// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetConsumerClientIDRequest {}

message QueryGetConsumerClientIDResponse {
	ConsumerClientID ConsumerClientID = 1 [(gogoproto.nullable) = false];
}
// this line is used by starport scaffolding # 3
